Begin create index page

--- a/source/stylesheets/pages/_icons.less
+++ b/source/stylesheets/pages/_icons.less
@@ -17,6 +17,12 @@
 			.sprite(@house);
 		}
 	}
+
+	&--house-white {
+		&:after {
+			.sprite(@house-white);
+		}
+	}
 	
 	&--facebook {
 		&:after {
