--- a/source/stylesheets/pages/_typo.less
+++ b/source/stylesheets/pages/_typo.less
@@ -127,6 +127,9 @@
     &-rouble {
         font-family: 'als_rublregular';
     }
+    &-trebuchet {
+        font-family: "Trebuchet MS", Helvetica, sans-serif;
+    }
 }
 
 body {
@@ -186,4 +189,22 @@ a {
 }
 p {
 	margin: 0px 0px 20px;
+}
+.orange {
+    &,
+    &:hover {
+        color: @orange-color;
+    }
+}
+.marine {
+    &,
+    &:hover {
+        color: @marine-color;
+    }
+}
+.green {
+    &,
+    &:hover {
+        color: @green-color;
+    }
 }
