--- a/source/stylesheets/pages/header/header.less
+++ b/source/stylesheets/pages/header/header.less
@@ -1,8 +1,56 @@
 
 .header {
-	
-	
-	
+	margin-bottom: 38px;
+	&__top {
+		padding: 29px 0px 25px;
+	}
+	&__bottom {
+		
+	}
+	&__phone {
+		float: left;
+		padding: 15px 0px 0px;
+		&-label {
+			display: block;
+			color: @gray-color;
+			&:extend(.font-trebuchet);
+			font-size: 12px;
+			line-height: 1.1;
+			margin-bottom: 5px;
+		}
+		&-num {
+			color: @base-light-color;
+			font-family: 'houschka_roundedmedium';
+			font-size: 20px;
+			.decorate {
+				font-weight: 700;
+				color: @base-dark-color;
+				font-family: 'houschka_roundedextrabold';
+			}
+		}
+	}
+	&__social {
+		float: right;
+		padding: 15px 0px 0px;
+		&-label {
+			display: block;
+			color: @gray-color;
+			&:extend(.font-trebuchet);
+			font-size: 12px;
+			line-height: 1.1;
+			margin-bottom: 5px;
+		}
+		&-item {
+			display: inline-block;
+			width: 24px;
+			height: 24px;
+			border-radius: 50%;
+			margin-left: 4px;
+			&:nth-child(2) {
+				margin-left: 0px;
+			}
+		}
+	}
 }
 
 @media (max-width: @screen-md) {
