--- a/source/stylesheets/sprites/sprites.less
+++ b/source/stylesheets/sprites/sprites.less
@@ -12,71 +12,71 @@ At the bottom of this section, we provide information about the spritesheet itse
 @spritesheet: width height image @spritesheet-sprites;
 */
 @arrow-left-hover-name: arrow-left-hover;
-@arrow-left-hover-x: 36px;
+@arrow-left-hover-x: 18px;
 @arrow-left-hover-y: 140px;
-@arrow-left-hover-offset-x: -36px;
+@arrow-left-hover-offset-x: -18px;
 @arrow-left-hover-offset-y: -140px;
 @arrow-left-hover-width: 8px;
 @arrow-left-hover-height: 19px;
 @arrow-left-hover-total-width: 182px;
 @arrow-left-hover-total-height: 177px;
 @arrow-left-hover-image: '../images/sprites/sprite.png';
-@arrow-left-hover: 36px 140px -36px -140px 8px 19px 182px 177px '../images/sprites/sprite.png' arrow-left-hover;
+@arrow-left-hover: 18px 140px -18px -140px 8px 19px 182px 177px '../images/sprites/sprite.png' arrow-left-hover;
 @arrow-left-name: arrow-left;
-@arrow-left-x: 18px;
+@arrow-left-x: 0px;
 @arrow-left-y: 140px;
-@arrow-left-offset-x: -18px;
+@arrow-left-offset-x: 0px;
 @arrow-left-offset-y: -140px;
 @arrow-left-width: 8px;
 @arrow-left-height: 19px;
 @arrow-left-total-width: 182px;
 @arrow-left-total-height: 177px;
 @arrow-left-image: '../images/sprites/sprite.png';
-@arrow-left: 18px 140px -18px -140px 8px 19px 182px 177px '../images/sprites/sprite.png' arrow-left;
+@arrow-left: 0px 140px 0px -140px 8px 19px 182px 177px '../images/sprites/sprite.png' arrow-left;
 @arrow-right-hover-name: arrow-right-hover;
-@arrow-right-hover-x: 54px;
+@arrow-right-hover-x: 36px;
 @arrow-right-hover-y: 140px;
-@arrow-right-hover-offset-x: -54px;
+@arrow-right-hover-offset-x: -36px;
 @arrow-right-hover-offset-y: -140px;
 @arrow-right-hover-width: 8px;
 @arrow-right-hover-height: 19px;
 @arrow-right-hover-total-width: 182px;
 @arrow-right-hover-total-height: 177px;
 @arrow-right-hover-image: '../images/sprites/sprite.png';
-@arrow-right-hover: 54px 140px -54px -140px 8px 19px 182px 177px '../images/sprites/sprite.png' arrow-right-hover;
+@arrow-right-hover: 36px 140px -36px -140px 8px 19px 182px 177px '../images/sprites/sprite.png' arrow-right-hover;
 @arrow-right-name: arrow-right;
-@arrow-right-x: 0px;
+@arrow-right-x: 54px;
 @arrow-right-y: 140px;
-@arrow-right-offset-x: 0px;
+@arrow-right-offset-x: -54px;
 @arrow-right-offset-y: -140px;
 @arrow-right-width: 8px;
 @arrow-right-height: 19px;
 @arrow-right-total-width: 182px;
 @arrow-right-total-height: 177px;
 @arrow-right-image: '../images/sprites/sprite.png';
-@arrow-right: 0px 140px 0px -140px 8px 19px 182px 177px '../images/sprites/sprite.png' arrow-right;
+@arrow-right: 54px 140px -54px -140px 8px 19px 182px 177px '../images/sprites/sprite.png' arrow-right;
 @back-hover-name: back-hover;
-@back-hover-x: 54px;
+@back-hover-x: 81px;
 @back-hover-y: 169px;
-@back-hover-offset-x: -54px;
+@back-hover-offset-x: -81px;
 @back-hover-offset-y: -169px;
 @back-hover-width: 17px;
 @back-hover-height: 8px;
 @back-hover-total-width: 182px;
 @back-hover-total-height: 177px;
 @back-hover-image: '../images/sprites/sprite.png';
-@back-hover: 54px 169px -54px -169px 17px 8px 182px 177px '../images/sprites/sprite.png' back-hover;
+@back-hover: 81px 169px -81px -169px 17px 8px 182px 177px '../images/sprites/sprite.png' back-hover;
 @back-name: back;
-@back-x: 27px;
+@back-x: 54px;
 @back-y: 169px;
-@back-offset-x: -27px;
+@back-offset-x: -54px;
 @back-offset-y: -169px;
 @back-width: 17px;
 @back-height: 8px;
 @back-total-width: 182px;
 @back-total-height: 177px;
 @back-image: '../images/sprites/sprite.png';
-@back: 27px 169px -27px -169px 17px 8px 182px 177px '../images/sprites/sprite.png' back;
+@back: 54px 169px -54px -169px 17px 8px 182px 177px '../images/sprites/sprite.png' back;
 @doc-name: doc;
 @doc-x: 128px;
 @doc-y: 0px;
@@ -110,6 +110,17 @@ At the bottom of this section, we provide information about the spritesheet itse
 @facebook-total-height: 177px;
 @facebook-image: '../images/sprites/sprite.png';
 @facebook: 70px 70px -70px -70px 25px 25px 182px 177px '../images/sprites/sprite.png' facebook;
+@house-white-name: house-white;
+@house-white-x: 133px;
+@house-white-y: 105px;
+@house-white-offset-x: -133px;
+@house-white-offset-y: -105px;
+@house-white-width: 18px;
+@house-white-height: 18px;
+@house-white-total-width: 182px;
+@house-white-total-height: 177px;
+@house-white-image: '../images/sprites/sprite.png';
+@house-white: 133px 105px -133px -105px 18px 18px 182px 177px '../images/sprites/sprite.png' house-white;
 @house-name: house;
 @house-x: 105px;
 @house-y: 105px;
@@ -144,71 +155,71 @@ At the bottom of this section, we provide information about the spritesheet itse
 @instagram-image: '../images/sprites/sprite.png';
 @instagram: 0px 105px 0px -105px 25px 25px 182px 177px '../images/sprites/sprite.png' instagram;
 @paging-arrow-left-hover-name: paging-arrow-left-hover;
-@paging-arrow-left-hover-x: 0px;
+@paging-arrow-left-hover-x: 108px;
 @paging-arrow-left-hover-y: 169px;
-@paging-arrow-left-hover-offset-x: 0px;
+@paging-arrow-left-hover-offset-x: -108px;
 @paging-arrow-left-hover-offset-y: -169px;
 @paging-arrow-left-hover-width: 17px;
 @paging-arrow-left-hover-height: 8px;
 @paging-arrow-left-hover-total-width: 182px;
 @paging-arrow-left-hover-total-height: 177px;
 @paging-arrow-left-hover-image: '../images/sprites/sprite.png';
-@paging-arrow-left-hover: 0px 169px 0px -169px 17px 8px 182px 177px '../images/sprites/sprite.png' paging-arrow-left-hover;
+@paging-arrow-left-hover: 108px 169px -108px -169px 17px 8px 182px 177px '../images/sprites/sprite.png' paging-arrow-left-hover;
 @paging-arrow-left-unactive-name: paging-arrow-left-unactive;
-@paging-arrow-left-unactive-x: 81px;
+@paging-arrow-left-unactive-x: 27px;
 @paging-arrow-left-unactive-y: 169px;
-@paging-arrow-left-unactive-offset-x: -81px;
+@paging-arrow-left-unactive-offset-x: -27px;
 @paging-arrow-left-unactive-offset-y: -169px;
 @paging-arrow-left-unactive-width: 17px;
 @paging-arrow-left-unactive-height: 8px;
 @paging-arrow-left-unactive-total-width: 182px;
 @paging-arrow-left-unactive-total-height: 177px;
 @paging-arrow-left-unactive-image: '../images/sprites/sprite.png';
-@paging-arrow-left-unactive: 81px 169px -81px -169px 17px 8px 182px 177px '../images/sprites/sprite.png' paging-arrow-left-unactive;
+@paging-arrow-left-unactive: 27px 169px -27px -169px 17px 8px 182px 177px '../images/sprites/sprite.png' paging-arrow-left-unactive;
 @paging-arrow-left-name: paging-arrow-left;
-@paging-arrow-left-x: 153px;
-@paging-arrow-left-y: 140px;
-@paging-arrow-left-offset-x: -153px;
-@paging-arrow-left-offset-y: -140px;
+@paging-arrow-left-x: 0px;
+@paging-arrow-left-y: 169px;
+@paging-arrow-left-offset-x: 0px;
+@paging-arrow-left-offset-y: -169px;
 @paging-arrow-left-width: 17px;
 @paging-arrow-left-height: 8px;
 @paging-arrow-left-total-width: 182px;
 @paging-arrow-left-total-height: 177px;
 @paging-arrow-left-image: '../images/sprites/sprite.png';
-@paging-arrow-left: 153px 140px -153px -140px 17px 8px 182px 177px '../images/sprites/sprite.png' paging-arrow-left;
+@paging-arrow-left: 0px 169px 0px -169px 17px 8px 182px 177px '../images/sprites/sprite.png' paging-arrow-left;
 @paging-arrow-right-hover-name: paging-arrow-right-hover;
-@paging-arrow-right-hover-x: 72px;
+@paging-arrow-right-hover-x: 99px;
 @paging-arrow-right-hover-y: 140px;
-@paging-arrow-right-hover-offset-x: -72px;
+@paging-arrow-right-hover-offset-x: -99px;
 @paging-arrow-right-hover-offset-y: -140px;
 @paging-arrow-right-hover-width: 17px;
 @paging-arrow-right-hover-height: 8px;
 @paging-arrow-right-hover-total-width: 182px;
 @paging-arrow-right-hover-total-height: 177px;
 @paging-arrow-right-hover-image: '../images/sprites/sprite.png';
-@paging-arrow-right-hover: 72px 140px -72px -140px 17px 8px 182px 177px '../images/sprites/sprite.png' paging-arrow-right-hover;
+@paging-arrow-right-hover: 99px 140px -99px -140px 17px 8px 182px 177px '../images/sprites/sprite.png' paging-arrow-right-hover;
 @paging-arrow-right-unactive-name: paging-arrow-right-unactive;
-@paging-arrow-right-unactive-x: 133px;
+@paging-arrow-right-unactive-x: 161px;
 @paging-arrow-right-unactive-y: 105px;
-@paging-arrow-right-unactive-offset-x: -133px;
+@paging-arrow-right-unactive-offset-x: -161px;
 @paging-arrow-right-unactive-offset-y: -105px;
 @paging-arrow-right-unactive-width: 17px;
 @paging-arrow-right-unactive-height: 8px;
 @paging-arrow-right-unactive-total-width: 182px;
 @paging-arrow-right-unactive-total-height: 177px;
 @paging-arrow-right-unactive-image: '../images/sprites/sprite.png';
-@paging-arrow-right-unactive: 133px 105px -133px -105px 17px 8px 182px 177px '../images/sprites/sprite.png' paging-arrow-right-unactive;
+@paging-arrow-right-unactive: 161px 105px -161px -105px 17px 8px 182px 177px '../images/sprites/sprite.png' paging-arrow-right-unactive;
 @paging-arrow-right-name: paging-arrow-right;
-@paging-arrow-right-x: 160px;
-@paging-arrow-right-y: 105px;
-@paging-arrow-right-offset-x: -160px;
-@paging-arrow-right-offset-y: -105px;
+@paging-arrow-right-x: 72px;
+@paging-arrow-right-y: 140px;
+@paging-arrow-right-offset-x: -72px;
+@paging-arrow-right-offset-y: -140px;
 @paging-arrow-right-width: 17px;
 @paging-arrow-right-height: 8px;
 @paging-arrow-right-total-width: 182px;
 @paging-arrow-right-total-height: 177px;
 @paging-arrow-right-image: '../images/sprites/sprite.png';
-@paging-arrow-right: 160px 105px -160px -105px 17px 8px 182px 177px '../images/sprites/sprite.png' paging-arrow-right;
+@paging-arrow-right: 72px 140px -72px -140px 17px 8px 182px 177px '../images/sprites/sprite.png' paging-arrow-right;
 @pdf-name: pdf;
 @pdf-x: 64px;
 @pdf-y: 0px;
@@ -221,27 +232,27 @@ At the bottom of this section, we provide information about the spritesheet itse
 @pdf-image: '../images/sprites/sprite.png';
 @pdf: 64px 0px -64px 0px 54px 60px 182px 177px '../images/sprites/sprite.png' pdf;
 @readmore-hover-name: readmore-hover;
-@readmore-hover-x: 99px;
+@readmore-hover-x: 126px;
 @readmore-hover-y: 140px;
-@readmore-hover-offset-x: -99px;
+@readmore-hover-offset-x: -126px;
 @readmore-hover-offset-y: -140px;
 @readmore-hover-width: 17px;
 @readmore-hover-height: 8px;
 @readmore-hover-total-width: 182px;
 @readmore-hover-total-height: 177px;
 @readmore-hover-image: '../images/sprites/sprite.png';
-@readmore-hover: 99px 140px -99px -140px 17px 8px 182px 177px '../images/sprites/sprite.png' readmore-hover;
+@readmore-hover: 126px 140px -126px -140px 17px 8px 182px 177px '../images/sprites/sprite.png' readmore-hover;
 @readmore-name: readmore;
-@readmore-x: 126px;
+@readmore-x: 153px;
 @readmore-y: 140px;
-@readmore-offset-x: -126px;
+@readmore-offset-x: -153px;
 @readmore-offset-y: -140px;
 @readmore-width: 17px;
 @readmore-height: 8px;
 @readmore-total-width: 182px;
 @readmore-total-height: 177px;
 @readmore-image: '../images/sprites/sprite.png';
-@readmore: 126px 140px -126px -140px 17px 8px 182px 177px '../images/sprites/sprite.png' readmore;
+@readmore: 153px 140px -153px -140px 17px 8px 182px 177px '../images/sprites/sprite.png' readmore;
 @twitter-hover-name: twitter-hover;
 @twitter-hover-x: 70px;
 @twitter-hover-y: 105px;
@@ -300,7 +311,7 @@ At the bottom of this section, we provide information about the spritesheet itse
 @spritesheet-width: 182px;
 @spritesheet-height: 177px;
 @spritesheet-image: '../images/sprites/sprite.png';
-@spritesheet-sprites: @arrow-left-hover @arrow-left @arrow-right-hover @arrow-right @back-hover @back @doc @facebook-hover @facebook @house @instagram-hover @instagram @paging-arrow-left-hover @paging-arrow-left-unactive @paging-arrow-left @paging-arrow-right-hover @paging-arrow-right-unactive @paging-arrow-right @pdf @readmore-hover @readmore @twitter-hover @twitter @vkontakte-hover @vkontakte @xls;
+@spritesheet-sprites: @arrow-left-hover @arrow-left @arrow-right-hover @arrow-right @back-hover @back @doc @facebook-hover @facebook @house-white @house @instagram-hover @instagram @paging-arrow-left-hover @paging-arrow-left-unactive @paging-arrow-left @paging-arrow-right-hover @paging-arrow-right-unactive @paging-arrow-right @pdf @readmore-hover @readmore @twitter-hover @twitter @vkontakte-hover @vkontakte @xls;
 @spritesheet: 182px 177px '../images/sprites/sprite.png' @spritesheet-sprites;
 
 /*
