--- a/source/templates/pages/index.html
+++ b/source/templates/pages/index.html
@@ -4,4 +4,73 @@ title: Главная страница
 name: index
 ---
 
+<div class="container m-b-40">
+	<div class="row">
+		<div class="col-md-48 col-lg-12">
 
+			<ul class="nav leftnav">
+				<li class="leftnav__item">
+					<a href="">
+						<span class="decorate">О нас</span>
+					</a>
+				</li>
+				<li class="leftnav__item active">
+					<a href="">
+						<span class="decorate">Условия приема</span>
+					</a>
+				</li>
+				<li class="leftnav__item">
+					<a href="">
+						<span class="decorate">Расположение</span>
+					</a>
+				</li>
+				<li class="leftnav__item">
+					<a href="">
+						<span class="decorate">Сотрудники</span>
+					</a>
+				</li>
+				<li class="leftnav__item">
+					<a href="">
+						<span class="decorate">Документы</span>
+					</a>
+				</li>
+				<li class="leftnav__item">
+					<a href="">
+						<span class="decorate">Новости</span>
+					</a>
+				</li>
+				<li class="leftnav__item">
+					<a href="">
+						<span class="decorate">Оздоровительный центр</span>
+					</a>
+				</li>
+			</ul>
+
+		</div>
+		<div class="col-md-48 col-lg-36">
+			
+			<div id="carousel-example-generic" class="carousel index-carousel slide" data-ride="carousel">
+
+				<!-- Wrapper for slides -->
+				<div class="carousel-inner" role="listbox">
+					<div class="item active">
+						<img src="images/pages-images/index/slider/img-1.jpg" width="720" height="350" />
+						<div class="carousel-caption index-carousel__caption">
+							“Уникум” сегодня - это одна
+							из лучших столичных школ
+						</div>
+					</div>
+					<div class="item">
+						<img src="images/pages-images/index/slider/img-1.jpg" width="720" height="350" />
+						<div class="carousel-caption index-carousel__caption">
+							“Уникум” сегодня - это одна
+							из лучших столичных школ
+						</div>
+					</div>
+				</div>
+
+			</div>
+
+		</div>
+	</div>
+</div>
