--- a/source/stylesheets/app.less
+++ b/source/stylesheets/app.less
@@ -9,9 +9,9 @@
 @grid-gutter-width:         0px;
 
 @font-size-base:          16px;
-@line-height-base:        1.78571428571; // 25/14
+// @line-height-base:        1.78571428571; // 25/14
 
-@container-large-desktop:      (1180px + @grid-gutter-width);
+@container-large-desktop:      (960px + @grid-gutter-width);
 
 
 /* *************************** [/Variables] ****************************** */
