--- a/source/templates/partials/header.html
+++ b/source/templates/partials/header.html
@@ -1,5 +1,75 @@
-<header class="header">
-	
-	
-	
+<header class="header container">
+
+	<div class="row header__top">
+		<div class="col-md-48 col-lg-17">
+			<div class="header__phone">
+				<span class="header__phone-label">
+					Контактный телефон:
+				</span>
+				<span class="header__phone-num">
+					+7 (495) <strong class="decorate">223-34-21</strong>
+				</span>
+			</div>
+		</div>
+		<div class="col-md-48 col-lg-14">
+			<a class="header__logo" href="index.html">
+				<img src="images/unikum-logo.png" width="236" height="92" />
+			</a>
+		</div>
+		<div class="col-md-48 col-lg-17">
+			<div class="header__social">
+				<span class="header__social-label">
+					Присоединяйтесь
+				</span>
+				<a class="header__social-item" href="">
+					<i class="icons icons--facebook"></i>
+				</a><a class="header__social-item" href="">
+					<i class="icons icons--vkontakte"></i>
+				</a><a class="header__social-item" href="">
+					<i class="icons icons--twitter"></i>
+				</a><a class="header__social-item" href="">
+					<i class="icons icons--instagram"></i>
+				</a>
+			</div>
+		</div>
+	</div>
+	<div class="row header__bottom">
+		<div class="col-md-48 col-lg-42 col-lg-offset-3 p-l-15">
+
+			<ul class="nav nav-justified topnav">
+				<li class="topnav__item text-right">
+					<a class="topnav__home active" href="">
+						<i class="icons icons--house-white"></i>
+						<i class="icons icons--house"></i>
+					</a>
+				</li>
+				<li class="topnav__item">
+					<a class="orange" href="">
+						<span class="decorate">Ясли</span>
+					</a>
+				</li>
+				<li class="topnav__item">
+					<a class="marine" href="">
+						<span class="decorate">Детский сад</span>
+					</a>
+				</li>
+				<li class="topnav__item">
+					<a class="green" href="">
+						<span class="decorate">Начальная школа</span>
+					</a>
+				</li>
+				<li class="topnav__item">
+					<a href="">
+						<span class="decorate">Доп. услуги</span>
+					</a>
+				</li>
+				<li class="topnav__item">
+					<a href="">
+						<span class="decorate">Контакты</span>
+					</a>
+				</li>
+			</ul>
+
+		</div>
+	</div>
 </header>
