--- a/source/stylesheets/pages/main/main.less
+++ b/source/stylesheets/pages/main/main.less
@@ -67,8 +67,71 @@
 	max-width: 260px;
 	width: 260px;
 	min-height: 390px;
-	border: 5px solid #d4dee7;
+	border: 5px solid @border-color;
 	position: relative;
 	overflow: hidden;
 	display: block;
+	img {
+		min-width: 100%;
+		height: auto;
+	}
+}
+
+.addservices {
+	&__title {
+		font-size: 30px;
+		font-family: 'houschka_roundedextrabold';
+		text-align: center;
+		margin-bottom: 17px;
+	}
+	&__anons {
+		text-align: center;
+		font-family: 'houschka_roundedmedium';
+		font-size: 20px;
+		line-height: 1.45;
+		margin-bottom: 33px;
+		& p {
+			margin: 0px;
+		}
+	}
+	&__frame {
+		&,
+		&:hover,
+		&:focus {
+			text-decoration: none;
+		}		
+		&-round {
+			display: inline-block;
+			vertical-align: middle;
+			position: relative;
+			overflow: hidden;
+			width: 120px;
+			height: 120px;
+			margin-right: 25px;
+			border: 4px solid @border-color;
+			border-radius: 50%;
+			img {
+				display: block;
+			}
+		}
+		&:hover {
+			.decorate {
+				border-bottom: 0px none;
+			}
+		}
+	}
+	&__name {
+		font-size: 20px;
+		font-family: 'houschka_roundedbold';
+		line-height: 1.25;
+		display: inline-block;
+		vertical-align: middle;
+		max-width: 160px;
+		color: @base-dark-color;
+		.decorate {
+			display: inline-block;
+			line-height: 0.8;
+			border-bottom: 1px solid #a1a1a1;
+		}
+	}
 }
