--- a/source/stylesheets/pages/total.less
+++ b/source/stylesheets/pages/total.less
@@ -77,3 +77,32 @@ a:active:focus,button:active:focus {
 		}
 	}
 }
+.shadow-line {
+	display: block;
+	position: relative;
+	height: 40px;
+	margin-bottom: 40px;
+	&:after {
+		content: "";
+		background: #fff;
+		display: block;
+		position: absolute;
+		top: 0px;
+		right: 0px;
+		bottom: 0px;
+		left: 0px;
+		z-index: 10;
+	}
+	&:before {
+		content: "";
+		display: block;
+		position: absolute;
+		left: 5%;
+		right: 5%;
+		bottom: 0px;
+		box-shadow: 0px 10px 10px rgba(236,240,245,0.80);
+		height: 20px;
+		border-radius: 100%;
+		z-index: 1;
+	}
+}
