--- a/source/stylesheets/pages/_typo.less
+++ b/source/stylesheets/pages/_typo.less
@@ -193,18 +193,18 @@ p {
 .orange {
     &,
     &:hover {
-        color: @orange-color;
+        color: @orange-color!important;
     }
 }
 .marine {
     &,
     &:hover {
-        color: @marine-color;
+        color: @marine-color!important;
     }
 }
 .green {
     &,
     &:hover {
-        color: @green-color;
+        color: @green-color!important;
     }
 }
