--- a/source/stylesheets/pages/footer/footer.less
+++ b/source/stylesheets/pages/footer/footer.less
@@ -1,8 +1,72 @@
 
 .footer {
-	
-	
-	
+	&__top {
+		background: #e7f4f8 url(../images/wave-bg.png) repeat-x 50% 0px;
+		padding: 65px 0px 60px;
+	}
+	&__bottom {
+		background: #dfedf1;
+		padding: 25px 0px;
+		line-height: 1.1;
+		&,
+		& a {
+			color: @gray-color;
+			font-size: 12px;
+		}
+		& a {
+			text-decoration: underline;
+			&:hover {
+				text-decoration: none;
+			}
+		}
+	}
+	&__logo {
+		margin-left: -10px;
+	}
+	&__phone {
+		float: left;
+		padding: 0px 0px;
+		&-label {
+			display: block;
+			color: @gray-color;
+			&:extend(.font-trebuchet);
+			font-size: 12px;
+			line-height: 1.1;
+			margin-bottom: 11px;
+		}
+		&-num {
+			color: @base-dark-color;
+			font-family: 'houschka_roundedmedium';
+			font-size: 16px;
+			.decorate {
+				font-weight: 700;
+				color: @base-dark-color;
+				font-family: 'houschka_roundedextrabold';
+			}
+		}
+	}
+	&__social {
+		float: right;
+		padding: 33px 0px 0px;
+		&-label {
+			display: block;
+			color: @gray-color;
+			&:extend(.font-trebuchet);
+			font-size: 12px;
+			line-height: 1.1;
+			margin-bottom: 15px;
+		}
+		&-item {
+			display: inline-block;
+			width: 24px;
+			height: 24px;
+			border-radius: 50%;
+			margin-left: 4px;
+			&:nth-child(2) {
+				margin-left: 0px;
+			}
+		}
+	}
 }
 
 @media (max-width: @screen-md) {
