--- a/source/templates/pages/index.html
+++ b/source/templates/pages/index.html
@@ -228,7 +228,7 @@ name: index
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-1.jpg" width="112" height="112" alt="" />
-				</span><span class="addservices__name" href="">
+				</span><span class="addservices__name">
 					<span class="decorate">Детские</span>
 					<br />
 					<span class="decorate">праздники</span>
@@ -239,7 +239,7 @@ name: index
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-2.jpg" width="112" height="112" alt="" />
-				</span><span class="addservices__name" href="">
+				</span><span class="addservices__name">
 					<span class="decorate">Трансфер</span>
 				</span>
 			</a>
@@ -248,7 +248,7 @@ name: index
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-3.jpg" width="112" height="112" alt="" />
-				</span><span class="addservices__name" href="">
+				</span><span class="addservices__name">
 					<span class="decorate">Няня</span>
 					<br />
 					<span class="decorate">выходного дня</span>
@@ -262,7 +262,7 @@ name: index
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-4.jpg" width="112" height="112" alt="" />
-				</span><span class="addservices__name" href="">
+				</span><span class="addservices__name">
 					<span class="decorate">Консультации</span>
 					<br /> 
 					<span class="decorate">для родителей</span>
@@ -273,7 +273,7 @@ name: index
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-5.jpg" width="112" height="112" alt="" />
-				</span><span class="addservices__name" href="">
+				</span><span class="addservices__name">
 					<span class="decorate">Услуги</span>
 					<br />
 					<span class="decorate">логопеда</span>
@@ -284,7 +284,7 @@ name: index
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-6.jpg" width="112" height="112" alt="" />
-				</span><span class="addservices__name" href="">
+				</span><span class="addservices__name">
 					<span class="decorate">Школа будущих</span>
 					<br />
 					<span class="decorate">родителей</span>
