--- a/source/templates/partials/footer.html
+++ b/source/templates/partials/footer.html
@@ -1,5 +1,133 @@
 <footer class="footer">
-	
-	
-	
+	<div class="footer__top">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-48 col-lg-6">
+
+					<a class="footer__logo" href="">
+						<img src="images/unikum-logo-btm.png" width="120" height="120" alt="" />
+					</a>
+
+				</div>
+				<div class="col-md-48 col-lg-11">
+
+					<div class="footer__phone">
+						<span class="footer__phone-label">
+							Контактный телефон:
+						</span>
+						<span class="footer__phone-num">
+							+7 (495) <strong class="decorate">223-34-21</strong>
+						</span>
+					</div>
+					<div class="footer__social pull-left">
+						<span class="footer__social-label">
+							Присоединяйтесь
+						</span>
+						<a class="footer__social-item" href="">
+							<i class="icons icons--facebook"></i>
+						</a><a class="footer__social-item" href="">
+							<i class="icons icons--vkontakte"></i>
+						</a><a class="footer__social-item" href="">
+							<i class="icons icons--twitter"></i>
+						</a><a class="footer__social-item" href="">
+							<i class="icons icons--instagram"></i>
+						</a>
+					</div>
+
+				</div>
+				<div class="col-md-48 col-lg-11">
+
+					<ul class="nav btmnav btmnav--bold">
+						<li class="btmnav__item">
+							<a class="orange" href="">
+								<span class="decorate">Ясли</span>
+							</a>
+						</li>
+						<li class="btmnav__item">
+							<a class="marine" href="">
+								<span class="decorate">Детский сад</span>
+							</a>
+						</li>
+						<li class="btmnav__item">
+							<a class="green" href="">
+								<span class="decorate">Начальная школа</span>
+							</a>
+						</li>
+						<li class="btmnav__item">
+							<a href="">
+								<span class="decorate">Дополнительные</span>
+								<br />
+								<span class="decorate">услуги</span>
+							</a>
+						</li>
+					</ul>
+
+				</div>
+				<div class="col-md-48 col-lg-10">
+
+					<ul class="nav btmnav">
+						<li class="btmnav__item">
+							<a href="">
+								<span class="decorate">О нас</span>
+							</a>
+						</li>
+						<li class="btmnav__item">
+							<a href="">
+								<span class="decorate">Условия приема</span>
+							</a>
+						</li>
+						<li class="btmnav__item">
+							<a href="">
+								<span class="decorate">Контакты</span>
+							</a>
+						</li>
+						<li class="btmnav__item">
+							<a href="">
+								<span class="decorate">Расположение</span>
+							</a>
+						</li>
+					</ul>
+
+				</div>
+				<div class="col-md-48 col-lg-10">
+
+					<ul class="nav btmnav">
+						<li class="btmnav__item">
+							<a href="">
+								<span class="decorate">Сотрудники</span>
+							</a>
+						</li>
+						<li class="btmnav__item">
+							<a href="">
+								<span class="decorate">Документы</span>
+							</a>
+						</li>
+						<li class="btmnav__item">
+							<a href="">
+								<span class="decorate">Новости</span>
+							</a>
+						</li>
+						<li class="btmnav__item">
+							<a href="">
+								<span class="decorate">Оздоровительный центр</span>
+							</a>
+						</li>
+					</ul>
+
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="footer__bottom">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-48 col-lg-24">
+					&copy; 2015, НОOУ Санаторно-лесная школа <a href="">Уникум</a>
+				</div>
+				<div class="col-md-48 col-lg-24 text-right">
+					Разработка сайта &mdash; <a href="http://www.spacebox.ru">Spacebox</a>
+				</div>
+			</div>
+		</div>
+	</div>
 </footer>
