--- a/source/templates/partials/header.html
+++ b/source/templates/partials/header.html
@@ -13,7 +13,7 @@
 		</div>
 		<div class="col-md-48 col-lg-14">
 			<a class="header__logo" href="index.html">
-				<img src="images/unikum-logo.png" width="236" height="92" />
+				<img src="images/unikum-logo.png" width="236" height="92" alt="" />
 			</a>
 		</div>
 		<div class="col-md-48 col-lg-17">
