--- a/source/stylesheets/app.less
+++ b/source/stylesheets/app.less
@@ -80,5 +80,6 @@
 @import "pages/main/main";
 @import "pages/page/page";
 @import "pages/news/news";
+@import "pages/about/about";
 
 @import "pages/footer/footer";
