--- a/source/stylesheets/pages/_variables.less
+++ b/source/stylesheets/pages/_variables.less
@@ -9,6 +9,7 @@
 @orange-color:        #f63;
 @marine-color:        #0ac;
 @green-color:         #5a0;
+@blue-color:          #0ac;
 @border-color:        #d4dee7;
 
 
