--- a/source/stylesheets/pages/_typo.less
+++ b/source/stylesheets/pages/_typo.less
@@ -135,6 +135,7 @@
 body {
 	&:extend(.font-trebuchet);
 	position: relative;
+    color: @base-color;
 }
 b,strong {
 	&:extend(.font-houschka-bold);
@@ -154,17 +155,17 @@ h1,h2,h3,h4,h5,h6,
 }
 h1,
 .h1 {
-    font-size: 42px;
+    font-size: 30px;
     &:extend(.font-houschka-bold);
 }
 h2,
 .h2 {
-    font-size: 37px;
+    font-size: 28px;
     &:extend(.font-houschka-bold);
 }
 h3,
 .h3 {
-    font-size: 28px;
+    font-size: 26px;
 }
 h4,
 .h4 {
