--- a/source/stylesheets/pages/page/page.less
+++ b/source/stylesheets/pages/page/page.less
@@ -1,6 +1,19 @@
 
 .page {
-	
-	
-	
+	background: transparent url(../images/page-bg.png) repeat 0% 0%;
+	position: relative;
+	box-shadow: 0px 5px 20px rgba(0,0,0,0.1);
+	padding: 33px 100px 46px 60px;
+	margin-right: -40px;
+	margin-bottom: 20px;
+	&:after {
+		content: "";
+		display: block;
+		width: 1px;
+		position: absolute;
+		background: rgba(255,102,51,0.1);
+		top: 0px;
+		right: 90px;
+		bottom: 0px;
+	}
 }
