Save changes for about page

--- a/source/stylesheets/pages/page/page.less
+++ b/source/stylesheets/pages/page/page.less
@@ -1,11 +1,12 @@
 
 .page {
-	background: transparent url(../images/page-bg.png) repeat 0% 0%;
+	background: white url(../images/page-bg.png) repeat 0% 0%;
 	position: relative;
 	box-shadow: 0px 5px 20px rgba(0,0,0,0.1);
 	padding: 33px 100px 46px 60px;
-	margin-right: -40px;
+	margin-right: -60px;
 	margin-bottom: 20px;
+	margin-left: 20px;
 	&:after {
 		content: "";
 		display: block;
