--- a/source/stylesheets/pages/total.less
+++ b/source/stylesheets/pages/total.less
@@ -115,3 +115,8 @@ a:active:focus,button:active:focus {
 		z-index: 1;
 	}
 }
+.special {
+	background: #d4dee7;
+	width: 260px;
+	min-height: 390px;
+}
