--- a/source/templates/pages/about.html
+++ b/source/templates/pages/about.html
@@ -45,6 +45,10 @@ name: index
 					</a>
 				</li>
 			</ul>
+			
+			<div class="special m-t-60">
+				
+			</div>
 
 		</div>
 		<div class="col-md-48 col-lg-36">
