Menu template change

--- a/source/stylesheets/pages/_navs.less
+++ b/source/stylesheets/pages/_navs.less
@@ -37,14 +37,14 @@
 			}
 			&:hover {
 				.decorate {
-					border-bottom: 0px none;
+					border-bottom-color: transparent;
 				}
 			}
 		}
 		&.active {
 			a {
 				.decorate {
-					border-bottom: 0px none;
+					border-bottom-color: transparent;
 				}
 			}
 		}
@@ -123,7 +123,7 @@
 		&:hover,
 		&.active {
 			.decorate {
-				border-bottom: 0px none;
+				border-bottom-color: transparent;
 			}
 		}
 		.decorate {
