--- a/source/templates/partials/header.html
+++ b/source/templates/partials/header.html
@@ -35,40 +35,8 @@
 	</div>
 	<div class="row header__bottom">
 		<div class="col-md-48 col-lg-42 col-lg-offset-3 p-l-15">
-
-			<ul class="nav nav-justified topnav">
-				<li class="topnav__item text-right">
-					<a class="topnav__home active" href="">
-						<i class="icons icons--house-white"></i>
-						<i class="icons icons--house"></i>
-					</a>
-				</li>
-				<li class="topnav__item">
-					<a class="orange" href="">
-						<span class="decorate">Ясли</span>
-					</a>
-				</li>
-				<li class="topnav__item">
-					<a class="marine" href="">
-						<span class="decorate">Детский сад</span>
-					</a>
-				</li>
-				<li class="topnav__item">
-					<a class="green" href="">
-						<span class="decorate">Начальная школа</span>
-					</a>
-				</li>
-				<li class="topnav__item">
-					<a href="">
-						<span class="decorate">Доп. услуги</span>
-					</a>
-				</li>
-				<li class="topnav__item">
-					<a href="">
-						<span class="decorate">Контакты</span>
-					</a>
-				</li>
-			</ul>
+			
+			{{> topnav }}
 
 		</div>
 	</div>
