--- a/source/templates/pages/about.html
+++ b/source/templates/pages/about.html
@@ -1,51 +1,15 @@
 ---
 layout: default.html
 title: Главная страница
-name: index
+name: about
 ---
 
 <div class="container m-b-40">
 	<div class="row">
 		<div class="col-md-48 col-lg-12">
-
-			<ul class="nav leftnav">
-				<li class="leftnav__item">
-					<a href="">
-						<span class="decorate">О нас</span>
-					</a>
-				</li>
-				<li class="leftnav__item active">
-					<a href="">
-						<span class="decorate">Условия приема</span>
-					</a>
-				</li>
-				<li class="leftnav__item">
-					<a href="">
-						<span class="decorate">Расположение</span>
-					</a>
-				</li>
-				<li class="leftnav__item">
-					<a href="">
-						<span class="decorate">Сотрудники</span>
-					</a>
-				</li>
-				<li class="leftnav__item">
-					<a href="">
-						<span class="decorate">Документы</span>
-					</a>
-				</li>
-				<li class="leftnav__item">
-					<a href="">
-						<span class="decorate">Новости</span>
-					</a>
-				</li>
-				<li class="leftnav__item">
-					<a href="">
-						<span class="decorate">Оздоровительный центр</span>
-					</a>
-				</li>
-			</ul>
 			
+			{{> leftnav }}
+
 			<div class="special m-t-60">
 				
 			</div>
