--- a/source/templates/pages/index.html
+++ b/source/templates/pages/index.html
@@ -7,44 +7,8 @@ name: index
 <div class="container m-b-40">
 	<div class="row">
 		<div class="col-md-48 col-lg-12">
-
-			<ul class="nav leftnav">
-				<li class="leftnav__item">
-					<a href="">
-						<span class="decorate">О нас</span>
-					</a>
-				</li>
-				<li class="leftnav__item active">
-					<a href="">
-						<span class="decorate">Условия приема</span>
-					</a>
-				</li>
-				<li class="leftnav__item">
-					<a href="">
-						<span class="decorate">Расположение</span>
-					</a>
-				</li>
-				<li class="leftnav__item">
-					<a href="">
-						<span class="decorate">Сотрудники</span>
-					</a>
-				</li>
-				<li class="leftnav__item">
-					<a href="">
-						<span class="decorate">Документы</span>
-					</a>
-				</li>
-				<li class="leftnav__item">
-					<a href="">
-						<span class="decorate">Новости</span>
-					</a>
-				</li>
-				<li class="leftnav__item">
-					<a href="">
-						<span class="decorate">Оздоровительный центр</span>
-					</a>
-				</li>
-			</ul>
+			
+			{{> leftnav }}
 
 		</div>
 		<div class="col-md-48 col-lg-36">
