--- a/source/stylesheets/pages/_variables.less
+++ b/source/stylesheets/pages/_variables.less
@@ -15,7 +15,7 @@
 
 /* 5 Columns Maket
    ========================================================================== */
-
+/*
 .col-xs-5,
 .col-sm-5,
 .col-md-5,
@@ -47,3 +47,4 @@
         float: left;
     }
 }
+*/
