--- a/source/templates/partials/leftnav.html
+++ b/source/templates/partials/leftnav.html
@@ -1,6 +1,6 @@
 <ul class="nav leftnav">
 	<li class="leftnav__item {{#is page.name 'about'}}active{{/is}}">
-		<a href="">
+		<a href="about.html">
 			<span class="decorate">О нас</span>
 		</a>
 	</li>
@@ -25,7 +25,7 @@
 		</a>
 	</li>
 	<li class="leftnav__item {{#is page.name 'news'}}active{{/is}}">
-		<a href="">
+		<a href="news.html">
 			<span class="decorate">Новости</span>
 		</a>
 	</li>
