--- a/source/stylesheets/pages/_typo.less
+++ b/source/stylesheets/pages/_typo.less
@@ -155,29 +155,33 @@ h1,h2,h3,h4,h5,h6,
 }
 h1,
 .h1 {
-    font-size: 30px;
-    &:extend(.font-houschka-bold);
+    font-size: 40px;
+    font-family: 'houschka_roundedextrabold';
 }
 h2,
 .h2 {
-    font-size: 28px;
-    &:extend(.font-houschka-bold);
+    font-size: 30px;
+    font-family: 'houschka_roundedbold';
 }
 h3,
 .h3 {
     font-size: 26px;
+    font-family: 'houschka_roundedbold';
 }
 h4,
 .h4 {
     font-size: 24px;
+    font-family: 'houschka_roundedbold';
 }
 h5,
 .h5 {
     font-size: 20px;
+    font-family: 'houschka_roundedbold';
 }
 h6,
 .h6 {
     font-size: 16px;
+    font-family: 'houschka_roundedbold';
 }
 html {
 	height: 100%;
