--- a/source/stylesheets/app.less
+++ b/source/stylesheets/app.less
@@ -82,5 +82,6 @@
 @import "pages/page/page";
 @import "pages/news/news";
 @import "pages/about/about";
+@import "pages/health-center/health-center";
 
 @import "pages/footer/footer";
