--- a/source/stylesheets/pages/_navs.less
+++ b/source/stylesheets/pages/_navs.less
@@ -122,7 +122,9 @@
 		}
 		&:hover,
 		&.active {
-			color: @orange-color;
+			a {
+				color: @orange-color;
+			}
 			.decorate {
 				border-bottom-color: transparent;
 			}
