--- a/source/templates/partials/leftnav.html
+++ b/source/templates/partials/leftnav.html
@@ -29,8 +29,8 @@
 			<span class="decorate">Новости</span>
 		</a>
 	</li>
-	<li class="leftnav__item {{#is page.name 'centr'}}active{{/is}}">
-		<a href="">
+	<li class="leftnav__item {{#is page.name 'health-center'}}active{{/is}}">
+		<a href="health-center.html">
 			<span class="decorate">Оздоровительный центр</span>
 		</a>
 	</li>
