--- a/source/stylesheets/pages/_icons.less
+++ b/source/stylesheets/pages/_icons.less
@@ -17,6 +17,24 @@
 			.sprite(@house);
 		}
 	}
+	
+	&--doc {
+		&:after {
+			.sprite(@doc);
+		}
+	}
+	
+	&--pdf {
+		&:after {
+			.sprite(@pdf);
+		}
+	}
+	
+	&--xls {
+		&:after {
+			.sprite(@xls);
+		}
+	}
 
 	&--house-white {
 		&:after {
