--- a/source/stylesheets/app.less
+++ b/source/stylesheets/app.less
@@ -83,5 +83,6 @@
 @import "pages/news/news";
 @import "pages/about/about";
 @import "pages/health-center/health-center";
+@import "pages/docs/docs";
 
 @import "pages/footer/footer";
