Edit page docs.html

--- a/source/templates/pages/docs.html
+++ b/source/templates/pages/docs.html
@@ -22,12 +22,14 @@ name: health-center
 				<div class="docs">
 					
 					<h1 class="docs__title">
-						Оздоровительный центр
+						Документы
 					</h1>
 					
 					<div class="docs__anons">
 						<p>
-							На базе школы и детского сада Уникум предоставляются дополнительные услуги для детей и их родителей. Воспользоваться услугами может любой желающий.
+							Вводный текст про раздел документов. Учебные занятия
+							строятся с учётом двух важных положений: необходимости обучения по программе общеобразовательной школы
+							и использования образовательного процесса с оздоровительной целью. 
 						</p>
 					</div>
 
