--- a/source/stylesheets/pages/_icons.less
+++ b/source/stylesheets/pages/_icons.less
@@ -35,6 +35,18 @@
 			.sprite(@xls);
 		}
 	}
+	
+	&--phone {
+		&:after {
+			.sprite(@phone);
+		}
+	}
+	
+	&--mail {
+		&:after {
+			.sprite(@mail);
+		}
+	}
 
 	&--house-white {
 		&:after {
