--- a/source/templates/partials/leftnav.html
+++ b/source/templates/partials/leftnav.html
@@ -19,8 +19,8 @@
 			<span class="decorate">Сотрудники</span>
 		</a>
 	</li>
-	<li class="leftnav__item {{#is page.name 'employees'}}active{{/is}}">
-		<a href="">
+	<li class="leftnav__item {{#is page.name 'docs'}}active{{/is}}">
+		<a href="docs.html">
 			<span class="decorate">Документы</span>
 		</a>
 	</li>
