--- a/source/stylesheets/app.less
+++ b/source/stylesheets/app.less
@@ -84,5 +84,6 @@
 @import "pages/about/about";
 @import "pages/health-center/health-center";
 @import "pages/docs/docs";
+@import "pages/employees/employees";
 
 @import "pages/footer/footer";
