--- a/source/stylesheets/pages/page/page.less
+++ b/source/stylesheets/pages/page/page.less
@@ -1,12 +1,22 @@
 
 .page {
-	background: white url(../images/page-bg.png) repeat 0% 0%;
+	background: white url(../images/page-bg.png) repeat 0% 8px;
 	position: relative;
 	box-shadow: 0px 5px 20px rgba(0,0,0,0.1);
 	padding: 33px 100px 46px 60px;
 	margin-right: -60px;
 	margin-bottom: 20px;
 	margin-left: 20px;
+	&:before {
+		content: "";
+		display: block;
+		position: absolute;
+		background: #fff;
+		right: 0px;
+		left: 0px;
+		top: 0px;
+		height: 10px;
+	}
 	&:after {
 		content: "";
 		display: block;
